# PythonProject

./: .env_example  .gitignore  CONSTANCE.py  README.md  logging.txt  main.py  old_main.py  pyproject.toml  requirements.txt  ЧЕРНОВИК.py
src/: banks_dict.py  decorators.py  external api.py  external_api.py  generators.py  main.py  masked.py  masks.py  processing.py  readers.py  utils.py  widget.py
tests/: conftest.py  logging.txt  test_banks_dict.py  test_decarators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_readers.py  test_utils.py  test_widget.py
